added remote credentials in pom

--- a/Git/pom.xml
+++ b/Git/pom.xml
@@ -24,7 +24,8 @@
 					<pushReleases>true</pushReleases>
 					<enableSshAgent>true</enableSshAgent>
 					<noDeploy>true</noDeploy>
-
+					<username>manoj-kumar-gedela</username>
+					<password>manoj_10111990</password>
 					<flowInitContext>
 						<masterBranchName>master</masterBranchName>
 						<developBranchName>development</developBranchName>
