--- a/Git/pom.xml
+++ b/Git/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gitflow</groupId>
 	<artifactId>Git</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
 		<plugins>
@@ -11,28 +11,30 @@
 				<artifactId>jgitflow-maven-plugin</artifactId>
 				<version>1.0-m5.1</version>
 				<configuration>
-					<keepBranch>false</keepBranch>
+					<allowUntracked>true</allowUntracked>
+					<allowSnapshots>true</allowSnapshots>
+					<goals>clean install</goals>
+					
+					<!-- <keepBranch>false</keepBranch>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<noTag>true</noTag>
 					<pullDevelop>true</pullDevelop>
 					<pullMaster>true</pullMaster>
-					<allowSnapshots>true</allowSnapshots>
-
-					<allowUntracked>true</allowUntracked>
 					<pushFeatures>true</pushFeatures>
 					<pushHotfixes>true</pushHotfixes>
 					<pushReleases>true</pushReleases>
 					<enableSshAgent>true</enableSshAgent>
 					<noDeploy>true</noDeploy>
 					<username>manoj-kumar-gedela</username>
-					<password>manoj_10111990</password>
+					<password>manoj_10111990</password> -->
+					
 					<flowInitContext>
 						<masterBranchName>master</masterBranchName>
 						<developBranchName>development</developBranchName>
-						<featureBranchPrefix>feature-</featureBranchPrefix>
+						<!-- <featureBranchPrefix>feature-</featureBranchPrefix>
 						<releaseBranchPrefix>release-</releaseBranchPrefix>
 						<hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
-						<versionTagPrefix>${project.artifactId}-</versionTagPrefix>
+						<versionTagPrefix>${project.artifactId}-</versionTagPrefix> -->
 					</flowInitContext>
 				</configuration>
 			</plugin>
