--- a/Git/pom.xml
+++ b/Git/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gitflow</groupId>
   <artifactId>Git</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.2-SNAPSHOT</version>
   
   <build>
 		<plugins>
