--- a/Git/pom.xml
+++ b/Git/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gitflow</groupId>
 	<artifactId>Git</artifactId>
-	<version>5.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
 		<plugins>
@@ -34,7 +34,7 @@
 						<featureBranchPrefix>feature-</featureBranchPrefix>
 						<releaseBranchPrefix>release-</releaseBranchPrefix>
 						<hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
-						<versionTagPrefix>${project.artifactId}-</versionTagPrefix>
+						<!-- <versionTagPrefix>${project.artifactId}-</versionTagPrefix> -->
 					</flowInitContext>
 				</configuration>
 			</plugin>
